add cookie images and chnging cookie

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <p id = 'multiplier'>Rate of Change: 1</p>
     <p id = 'autoclickers' class = 'remove'>Number of Autoclickers: 0</p>
 
-    <p><img id= 'cookie' src="cookie.jpg" width = 200></p>
-    <p><img id= 'cookie2' src="cookie.jpg" width = 100 class='remove'></p>
-    <p><img id= 'cookie3' src="cookie.jpg" width = 50 class='hide'></p>
-    <p><img id= 'cookie4' src="cookie.jpg" width = 50 class='hide'></p>
-    <p><img id= 'cookie5' src="cookie.jpg" width = 50 class='hide'></p>
-    <p><img id= 'cookie6' src="cookie.jpg" width = 50 class='hide'></p>
+    <p><img id= 'cookie' src="cookie0.jpg" width = 200></p>
+    <p><img id= 'cookie2' src="cookie0.jpg" width = 100 class='remove'></p>
+    <p><img id= 'cookie3' src="cookie0.jpg" width = 50 class='hide'></p>
+    <p><img id= 'cookie4' src="cookie0.jpg" width = 50 class='hide'></p>
+    <p><img id= 'cookie5' src="cookie0.jpg" width = 50 class='hide'></p>
+    <p><img id= 'cookie6' src="cookie0.jpg" width = 50 class='hide'></p>
 
     <p id= 'score'>0</p>
 
